docker-compose: adicionando frontend e dockerfiles